2021-04-29  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-progress-percent-display): Begin
	search at point-min.

2021-04-21  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-delete-line): Add prefix arg option to
	delete multiple lines

2021-04-21  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-header-prefix): Remove constant.
	(w3m--download-queue-header-prefix)
	(w3m--download-select-header-prefix): Replacement constants.
	(w3m-download-queue-help): Remove function.
	(w3m-download-help): Replacement function.
	(w3m-download-select-mode-map, w3m-download-queue-mode-map): Give it keybindings.
	(w3m-download-selected, w3m-download-paused, w3m-download-completed):
	Ensure no underlines in these faces.
	(w3m--download-update-statistics, w3m-download-select-mode): Fix
	header-line for session buffers.
	(w3m-download-select): Remove help hints from select buffers.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-toggle-line-wrap): New function.
	(w3m-download-queue-mode-map): Add it to keymap.
	(w3m-download-queue-help): Add it to mode help.
	(w3m-download-queue-mode): Add it to the mode docstring.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-header-prefix)
	(w3m--download-update-statistics)
	(w3m-download-queue-mode): Replace summary statistics line with static
	header line.
	(w3m--download-queue-buffer-header-string)
	(w3m--download-buffer-sequence, w3m--download-queue-list-point-min)
	(w3m--download-update-faces-pre-command)
	(w3m--download-update-faces-post-command)
	(w3m--download-update-display-queue-list)
	(w3m-download-queue-previous-entry, w3m-download-view-queue): Remove
	associated cruft.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (key-assist): Add requirement.
	(w3m-download-queue-help): Use it.

2021-04-13  Boruch Baum  <boruch_baum@gmx.com>
